Add checkboxes and radio buttons

--- a/Module5.html
+++ b/Module5.html
@@ -8,7 +8,23 @@
 <body>
     <br><br>
     <form method=“post” action=“process.php”>
-        <input type="text"><br>
+        <input type="text" name="query"><br>
+
+        <input type="checkbox" name="pet1" value="dog"> I have a dog<br>
+        <input type="checkbox" name="pet2" value="cat" checked> I have a cat<br>
+        <br>
+        What is your favorite flavor of icecream?<br>
+        <input type="radio" name="flavor" value="Chocolate">Chocolate<br>
+        <input type="radio" name="flavor" value="Vanilla">Vanilla<br>
+        <input type="radio" name="flavor" value="Other">Other<br>
+
+        <br><br>
+        What is your favorite number?<br>
+        <input type="radio" name="favNum" value="1">1<br>
+        <input type="radio" name="favNum" value="2">2<br>
+        <input type="radio" name="favNum" value="3">3<br>
+
+        <button>Click here!</button><br>
         <input type="submit" value="Submit">
     </form>
     <br><br>
