--- a/Module5.html
+++ b/Module5.html
@@ -10,6 +10,7 @@
     <form method=“post” action=“process.php”>
         <input type="text" name="query"><br>
 
+
         <input type="checkbox" name="pet1" value="dog"> I have a dog<br>
         <input type="checkbox" name="pet2" value="cat" checked> I have a cat<br>
         <br>
@@ -20,12 +21,17 @@
 
         <br><br>
         What is your favorite number?<br>
-        <input type="radio" name="favNum" value="1">1<br>
+        <input type="radio" name="favNum" value="1" checked>1<br>
         <input type="radio" name="favNum" value="2">2<br>
         <input type="radio" name="favNum" value="3">3<br>
 
+        <input type="email" name="myEmail"><br><br>
+
+        <input type="number" name="quantity" min="-5" max="10"><br>
+        <input type="number" name="quantity 2" min="100" max="200"
+
         <button>Click here!</button><br>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit"><br>
     </form>
     <br><br>
 
