--- a/Module5.html
+++ b/Module5.html
@@ -28,7 +28,22 @@
         <input type="email" name="myEmail"><br><br>
 
         <input type="number" name="quantity" min="-5" max="10"><br>
-        <input type="number" name="quantity 2" min="100" max="200"
+        <input type="number" name="quantity 2" min="100" max="200">
+        <br><br>
+
+        <select name="carlist">
+            <option value="accord">Honda Accord</option>
+            <option value="civic">Honda Civic</option>
+            <option value="altima">Nissan Altima</option>
+            <option value="impala">Chevey Impala</option>
+        </select>
+
+        <br><br>
+
+        <textarea rows="15" cols="100">
+        Here is some default text
+        </textarea>
+        
 
         <button>Click here!</button><br>
         <input type="submit" value="Submit"><br>
