--- a/Module5.html
+++ b/Module5.html
@@ -56,8 +56,26 @@
         <output form="numform" name="x" for="a b"></output>
 
         <br><br>
-        
 
+        <input list="browsers">
+
+        <datalist id="browsers">
+                <option value="Internet Explorer">Internet Explorer</option>
+                <option value="Firefox">Firefox</option>
+                <option value="Chrome">Chrome</option>
+                <option value="Opera">Opera</option>
+                <option value="Safari">Safari</option>
+        </datalist>
+
+        <br><br>
+
+        <fieldset>
+            <legend>Demographics</legend>
+            Name: <input type="text"><br>
+            Email: <input type="email"><br>
+            Date of birth: <input type="text">
+        </fieldset>
+        
         <button>Click here!</button><br>
         <input type="submit" value="Submit"><br>
     </form>
